<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/infoArtistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:paddingStart="@dimen/_8"
        android:paddingEnd="@dimen/_8"
        android:text="@string/madonna"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/infoSongGenre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvArtist"
        tools:text="@string/madonna" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/tvArtist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/infoSongYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:paddingStart="@dimen/_8"
        android:paddingEnd="@dimen/_8"
        android:text="2015"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/infoSongBitrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvYear"
        tools:text="2015" />

    <TextView
        android:id="@+id/infoSongGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="@dimen/_8"
        android:paddingEnd="@dimen/_8"
        android:text="Pop Rock"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/infoSongYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvGenre"
        tools:text="Pop Rock" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/year"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/tvBitrate"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/year" />

    <TextView
        android:id="@+id/tvBitrate"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="312dp"
        android:text="@string/bitrate"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/bitrate" />

    <TextView
        android:id="@+id/infoSongTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="@dimen/_8"
        android:paddingEnd="@dimen/_8"
        android:text="@string/like_a_prayer"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/infoArtistName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        tools:text="@string/like_a_prayer" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/genre"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/tvYear"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/genre" />

    <TextView
        android:id="@+id/infoSongBitrate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="312dp"
        android:paddingStart="@dimen/_8"
        android:paddingEnd="@dimen/_8"
        android:text="102kbps"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvBitrate"
        tools:text="102kbps" />

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/artist"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/tvGenre"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/artist" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="tvTitle,infoSongYear,infoSongGenre,tvYear,tvBitrate,infoSongTitle,tvGenre,tvArtist,infoSongBitrate,infoArtistName" />

</androidx.constraintlayout.widget.ConstraintLayout>